variety name details added
